# docs/swagger.json
@@ -108,6 +108,39 @@
                 }
             }
         },
+        "/api/refreshToken": {
+            "post": {
+                "description": "Authentication for user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "parameters": [
+                    {
+                        "description": "Refresh Param",
+                        "name": "refreshRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RefreshRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "200, Refresh Token Berhasil",
+                        "schema": {
+                            "$ref": "#/definitions/dto.RefreshResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/register": {
             "post": {
                 "description": "Register user",
@@ -205,6 +238,28 @@
                 }
             }
         },
+        "dto.RefreshRequest": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string",
+                    "example": "efhfiasfauwkawdawkdawj"
+                }
+            }
+        },
+        "dto.RefreshResponse": {
+            "type": "object",
+            "properties": {
+                "newToken": {
+                    "type": "string",
+                    "example": "efahfywfdawhaweaakdakw"
+                },
+                "oldToken": {
+                    "type": "string",
+                    "example": "efhfiasfauwkawdawkdawj"
+                }
+            }
+        },
         "dto.RegisterRequest": {
             "type": "object",
             "properties": {
@@ -280,7 +335,7 @@
                     "type": "string"
                 },
                 "userId": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
